# rov

./: .env.json.dist  .gitignore  Cargo.toml  Dockerfile  README.md  upload.ps1
.cargo/: config.toml
archive/: pi4b_target.json
examples/: pca_20kg_digital_servo.rs
init_rasp/: eee-disabling-eth0.service  eee-disabling-eth0.sh  setup_rasp.sh
src/: lecteur-udp.rs  main.rs
